@@ -1,16 +1,6 @@
 #include "../hedley.h"
 
-#if HEDLEY_HAS_WARNING("-Wc++11-extra-semi")
-#  pragma clang diagnostic warning "-Wc++11-extra-semi"
-#elif HEDLEY_HAS_WARNING("-Wextra-semi")
-#  pragma clang diagnostic warning "-Wextra-semi"
-#elif HEDLEY_IAR_VERSION_CHECK(8,0,0)
-#  pragma diag_suppress=Pe381
-#elif defined(HEDLEY_SUNPRO_VERSION) && !defined(__cplusplus)
-#  pragma error_messages(off,E_EMPTY_DECLARATION)
-#elif defined(HEDLEY_TI_VERSION)
-#  pragma diag_suppress 383
-#endif
+HEDLEY_DIAGNOSTIC_DISABLE_EXTRA_SEMI
 
 #ifdef __cplusplus
 struct Empty2 {};
