@@ -1,3 +1,9 @@
+Version 16
+==========
+
+* New HEDLEY_DIAGNOSTIC_DISABLE_EXTRA_SEMI macro.
+* Assorted bug fixes and enhancements.
+
 Version 15
 ==========
 
